--- a/project_2/Project_2_Ноутбук_шаблон.ipynb
+++ b/project_2/Project_2_Ноутбук_шаблон.ipynb
@@ -2655,8 +2655,11 @@
         "# Из 23501 работодателя пятерку компаний по количеству вакансий составляют: Яндекс, Ростелеком, Тинькофф, СБЕР и Газпром нефть\n",
         "# Из 1362 регионов пятерку регионов по количеству вакансий составляют: Москва, Санкт-Петербург, Минск, Новосибирск, Алматы\n",
         "# Из 24073 вакансий, где заполнено одно из двух полей с зарплатой, среднее значение для нижней границы зарплатной вилки - 71065, а для верхней - 110537\n",
-        "# Среди всех вакансий по популярности и сочетанию типа рабочего графика, а также типа трудоустройства является Полный день, Удаленная работа и Полная занятость\n",
-        "# Среди всех вакансий в порядке возрастания их количества по требуемому опыту работы является Более 6 лет — Нет опыта — От 3 до 6 лет — От 1 года до 3 лет\n",
+        "# Среди всех вакансий по популярности и сочетанию типа рабочего графика, а также типа трудоустройства является: Полный день, Удаленная работа и Полная занятость\n",
+        "# Среди всех вакансий в порядке возрастания их количества по требуемому опыту работы является: Более 6 лет — Нет опыта — От 3 до 6 лет — От 1 года до 3 лет\n",
+        "# Среди всех регионов по наибольшему количеству вакансий является Россия, а 485 вакансий компании Яндекс представлены в 181 регионе и в 16 городах-миллионниках России\n",
+        "# Из всех представленных на сайте работодателей у 8419 не указана их сфера деятельности, а тройку компаний, у которых указано четыре сферы деятельности составляют: 101 Интернет, 21vek.by и 2ГИС\n",
+        "# Из всех представленных на сайте работодателей у 3553 работодателей в качетсве сферы деятельности указана Разработка программного обеспечения\n",
         "\n",
         "# здесь можно (это будет плюсом) провести дополнительные исследования данных, сделать прогнозы, продумать варианты продолжения исследования"
       ]
